fix overflow section-item p

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,12 +37,14 @@ h1 {
 
 section {
     display: flex;
+    justify-content: center;
+    align-items: start;
     width: 24rem;
 }
 
 .section-item {
     width: 100%;
-    height: 32rem;
+    height: auto;
     gap: 1rem;
     display: flex;
     flex-direction: column;
@@ -94,9 +96,5 @@ footer p {
 
     main {
         padding: 2rem 0;
-    }
-
-    .section-item {
-        height: 26rem;
     }
 }
